# currency-agent-mcp-a2a

./: .env.example  .gitignore  README.md  pyproject.toml  test_guardrails_simple.py
currency_agent/: agent.py  guardrails.py  test_client.py
mcp-server/: pyproject.toml  server.py  test_server.py
