[project]
name = "mcp-currency-server"
version = "0.1.0"
description = "Currency conversion MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.11.3",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"